--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ description: Democracy never felt so real
 		</div>
 		<br /><br />
 		<h2 class="editable">What is Decidim?</h2>
-		<p class="subtext editable">Decidim is more than a digital platform, it is a Free/Open infrastructure for participatory democracy. It involves code, documentation, design, training, legal frameworks, collaborative interfaces, development-user-facilitation community and a shared vision. It helps society self-organize democratically, it helps citizens and institutions co-produce strategic planning, participatory budgeting, massive and distributed decision-making. Decidim boosts collective intelligence for the common good.</p>
+		<p class="subtext editable">Decidim is more than a digital platform, it is a Free/Open project and infrastructure for participatory democracy. It involves code, documentation, design, training, legal frameworks, innovative practices, collaborative interfaces, development, use, and facilitation communities, as well as a common vision. It helps society to self-organize democratically at every scale: it enables citizens, organizations and public institutions (in districts, cities, regions, and beyond) to co-produce strategic planning, to run participatory budgeting, to build multitudinous deliberation processes and to enact distributed decision-making. Decidim boosts collective intelligence for the common good.</p>
 	</div>
 </section>
 
